--- a/src/sass/blocks/search.scss
+++ b/src/sass/blocks/search.scss
@@ -8,6 +8,9 @@
   width: 100%;
 
   font-family: "Roboto", sans-serif;
+  font-size: 13px;
+  line-height: 21px;
+  font-weight: 400;
 
   border: none;
 }
