--- a/src/sass/blocks/page-header.scss
+++ b/src/sass/blocks/page-header.scss
@@ -1,35 +1,38 @@
 .page-header {
   margin-top: 70px;
   margin-bottom: 40px;
+}
 
-  &__wrapper {
-    padding: 27px 0;
-    background-color: #fcfcfc;
+.page-header__wrapper {
+  padding: 27px 0;
 
-    @include clearfix();
-  }
-  &__title {
-    position: relative;
+  background-color: #fcfcfc;
 
-    float: left;
-    width: 260px;
-    margin: 0;
-    margin-left: 40px;
+  @include clearfix();
+}
+.page-header__title {
+  position: relative;
 
-    font-size: 16px;
-    line-height: 21px;
-    font-weight: 400;
-    color: #333333;
+  float: left;
+  width: 260px;
+  margin: 0;
+  margin-left: 40px;
 
-    &:after {
-      position: absolute;
-      content: "";
-      top: -5px;
-      right: 50px;
-      width: 1px;
-      height: 40px;
-      color: #b5b5b5;
-      border-right: solid #b5b5b5 1px;
-    }
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 400;
+  color: #333333;
+
+  &:after {
+    position: absolute;
+    content: "";
+    top: -5px;
+    right: 50px;
+
+    width: 1px;
+    height: 40px;
+
+    color: #b5b5b5;
+    border-right: solid #b5b5b5 1px;
   }
 }
