--- a/src/sass/blocks/table.scss
+++ b/src/sass/blocks/table.scss
@@ -4,7 +4,13 @@
 }
 
 .table__td {
+  padding-top: 10px;
+  padding-bottom: 10px;
   border-bottom: 1px solid #d7d7d7;
+
+  &--border-none {
+    border: none;
+  }
 }
 .table__title {
   margin: 0;
@@ -15,7 +21,7 @@
   font-weight: 700;
 
   text-align: left;
-  background-color: #fefefe;
+  color: #444444;
 
 }
 .table__product-name {
@@ -23,7 +29,7 @@
 
   font-size: 16px;
   line-height: 21px;
-  font-weight: 400;
+  font-weight: 700;
 
   color: #444444;
   text-decoration: none;
